<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.sonatype.oss</groupId>
		<artifactId>oss-parent</artifactId>
		<version>7</version>
	</parent>

	<groupId>com.tojc.ormlite.android</groupId>
	<artifactId>ormlite-content-provider-parent</artifactId>
	<version>1.0.5-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>Android-OrmLiteContentProvider Parent</name>
	<description>This is a library that easy to make using ContentProvider with OrmLite.</description>
	<url>https://github.com/jakenjarvis/Android-OrmLiteContentProvider/</url>
	<inceptionYear>2012</inceptionYear>

	<modules>
		<module>ormlite-content-provider-library</module>
		<module>ormlite-content-provider-library-test</module>
		<module>ormlite-content-provider-compiler</module>
		<module>ormlite-content-provider-sample</module>
		<module>ormlite-content-provider-compiler-sample</module>
	</modules>

	<scm>
		<url>https://github.com/jakenjarvis/Android-OrmLiteContentProvider/</url>
		<connection>scm:git:git://github.com/jakenjarvis/Android-OrmLiteContentProvider.git</connection>
		<developerConnection>scm:git:git@github.com:jakenjarvis/Android-OrmLiteContentProvider.git</developerConnection>
		<tag>HEAD</tag>
	</scm>

	<developers>
		<developer>
			<id>jakenjarvis</id>
			<name>Jaken Jarvis</name>
			<email>jaken.jarvis@gmail.com</email>
			<url>https://github.com/jakenjarvis</url>
			<roles>
				<role>architect</role>
				<role>developer</role>
			</roles>
			<timezone>+9</timezone>
		</developer>
	</developers>

	<contributors>
		<contributor>
			<name>Stéphane NICOLAS</name>
			<email>snicolas@octo.com</email>
			<url>https://github.com/stephanenicolas</url>
			<organization>octo-online</organization>
			<organizationUrl>http://www.octo.com</organizationUrl>
			<roles>
				<role>developer</role>
			</roles>
			<timezone>+1</timezone>
		</contributor>
	</contributors>

	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<organization>
		<name>Android-OrmLiteContentProvider Team</name>
		<url>https://github.com/jakenjarvis/Android-OrmLiteContentProvider</url>
	</organization>

	<issueManagement>
		<system>GitHub Issues</system>
		<url>https://github.com/jakenjarvis/Android-OrmLiteContentProvider/issues</url>
	</issueManagement>

	<distributionManagement>
		<repository>
			<id>sonatype-nexus-staging</id>
			<name>Sonatype Nexus Staging(Release Repository)</name>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
		</repository>
		<snapshotRepository>
			<id>sonatype-nexus-snapshots</id>
			<name>Sonatype Nexus Snapshots</name>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
	</distributionManagement>

	<repositories>
		<repository>
			<id>android-support</id>
			<url>file://${env.ANDROID_HOME}/extras/android/m2repository</url>
			<releases>
				<enabled>true</enabled>
				<updatePolicy>always</updatePolicy>
			</releases>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>oss.sonatype.org-jayway-snapshots</id>
			<name>Jayway OpenSource SNAPSHOTs on Sonatype.org</name>
			<url>http://oss.sonatype.org/content/repositories/jayway-snapshots/</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>

	<properties>
	    <!-- infomation -->
	    <root.basedir>${project.basedir}</root.basedir>

		<!-- encoding -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

		<java.version>1.7</java.version>

		<!-- Compilation dependencies, build.gradle -->
		<android-sdk.version>22</android-sdk.version>
		<android-buildtools.version>22.0.1</android-buildtools.version>
		<android.version>4.1.1.4</android.version>
		<android-support.version>r7</android-support.version>

		<!-- AndroidManifest -->
		<android-min-sdk.version>8</android-min-sdk.version>
		<android-target-sdk.version>22</android-target-sdk.version>

		<!-- compiler dependencies -->
		<ormlite.version>4.48</ormlite.version>
		<javawriter.version>2.5.1</javawriter.version>
		<guava.version>18.0</guava.version>
		<spring-core.version>4.1.5.RELEASE</spring-core.version>

		<!-- test dependencies -->
		<junit.version>4.12</junit.version>
		<runner.version>0.2</runner.version>
		<rules.version>0.2</rules.version>

		<!-- plugins -->
		<maven-checkstyle-plugin.version>2.14</maven-checkstyle-plugin.version>
		<findbugs-maven-plugin.version>3.0.0</findbugs-maven-plugin.version>
		<maven-pmd-plugin.version>3.4</maven-pmd-plugin.version>
		<eclipse-lifecycle-plugin.version>1.0.0</eclipse-lifecycle-plugin.version>
		<maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
		<maven-release-plugin.version>2.5.1</maven-release-plugin.version>

		<android-maven-plugin.version>4.2.0</android-maven-plugin.version>
		<maven-compiler-plugin.version>3.2</maven-compiler-plugin.version>
		<maven-processor-plugin.version>2.2.4</maven-processor-plugin.version>
		<maven-antrun-plugin.version>1.8</maven-antrun-plugin.version>
		<build-helper-maven-plugin.version>1.9.1</build-helper-maven-plugin.version>
		<maven-replacer-plugin.version>1.5.3</maven-replacer-plugin.version>
		<exec-maven-plugin.version>1.3.2</exec-maven-plugin.version>

		<maven-site-plugin.version>3.4</maven-site-plugin.version>
		<maven-javadoc-plugin.version>2.10.1</maven-javadoc-plugin.version>
		<maven-source-plugin.version>2.4</maven-source-plugin.version>
		<maven-jxr-plugin.version>2.5</maven-jxr-plugin.version>

		<!-- release-sign-artifacts -->
		<maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>

		<!--
			$ mvn versions:display-dependency-updates
			$ mvn versions:update-properties
		-->
		<versions-maven-plugin.version>2.1.4</versions-maven-plugin.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.google.android</groupId>
				<artifactId>android</artifactId>
				<version>${android.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>com.google.android</groupId>
				<artifactId>android-test</artifactId>
				<version>${android.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>com.google.android</groupId>
				<artifactId>support-v4</artifactId>
				<version>${android-support.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>${guava.version}</version>
			</dependency>
			<dependency>
				<groupId>com.j256.ormlite</groupId>
				<artifactId>ormlite-core</artifactId>
				<version>${ormlite.version}</version>
			</dependency>
			<dependency>
				<groupId>com.j256.ormlite</groupId>
				<artifactId>ormlite-android</artifactId>
				<version>${ormlite.version}</version>
			</dependency>

			<dependency>
				<groupId>com.squareup</groupId>
				<artifactId>javawriter</artifactId>
				<version>${javawriter.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-core</artifactId>
				<version>${spring-core.version}</version>
			</dependency>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${junit.version}</version>
                <scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
				<!-- http://stackoverflow.com/questions/13040788/how-to-elimate-the-maven-enforcer-plugin-goal-enforce-is-ignored-by-m2e-wa -->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>${eclipse-lifecycle-plugin.version}</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>

								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>com.simpligility.maven.plugins</groupId>
										<artifactId>android-maven-plugin</artifactId>
										<versionRange>[3.8.1,)</versionRange>
										<goals>
											<goal>consume-aar</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>

								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.apache.maven.plugins</groupId>
										<artifactId>maven-enforcer-plugin</artifactId>
										<versionRange>[1.0.0,)</versionRange>
										<goals>
											<goal>enforce</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>

								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>com.google.code.maven-replacer-plugin</groupId>
										<artifactId>replacer</artifactId>
										<versionRange>[1.5.0,)</versionRange>
										<goals>
											<goal>replace</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>

							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${maven-compiler-plugin.version}</version>
					<configuration>
						<fork>true</fork>
						<source>${java.version}</source>
						<target>${java.version}</target>
						<showWarnings>true</showWarnings>
						<compilerArguments>
							<Xlint />
						</compilerArguments>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.bsc.maven</groupId>
					<artifactId>maven-processor-plugin</artifactId>
					<version>${maven-processor-plugin.version}</version>
					<configuration>
						<compilerArguments>-encoding ${project.build.sourceEncoding}</compilerArguments>
					</configuration>
				</plugin>

				<!-- Android config -->
				<plugin>
					<groupId>com.simpligility.maven.plugins</groupId>
					<artifactId>android-maven-plugin</artifactId>
					<version>${android-maven-plugin.version}</version>
					<configuration>
						<nativeLibrariesDirectory>ignored</nativeLibrariesDirectory>
						<sdk>
							<platform>${android-sdk.version}</platform>
						</sdk>
						<undeployBeforeDeploy>false</undeployBeforeDeploy>
						<dex>
							<jvmArguments>
								<jvmArgument>-Xmx1024m</jvmArgument>
								<jvmArgument>-XX:MaxPermSize=256m</jvmArgument>
							</jvmArguments>
						</dex>
					</configuration>
					<extensions>true</extensions>
				</plugin>

				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>build-helper-maven-plugin</artifactId>
					<version>${build-helper-maven-plugin.version}</version>
				</plugin>

				<plugin>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>${maven-deploy-plugin.version}</version>
				</plugin>

				<plugin>
					<groupId>com.google.code.maven-replacer-plugin</groupId>
					<artifactId>replacer</artifactId>
					<version>${maven-replacer-plugin.version}</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-checkstyle-plugin</artifactId>
					<version>${maven-checkstyle-plugin.version}</version>
					<configuration>
						<failsOnError>true</failsOnError>
						<consoleOutput>true</consoleOutput>
						<configLocation>style_checks.xml</configLocation>
						<enableRulesSummary>false</enableRulesSummary>
					</configuration>
					<executions>
						<execution>
							<id>checkstyle-check</id>
							<phase>process-sources</phase>
							<goals>
								<goal>check</goal>
							</goals>
						</execution>
					</executions>
				</plugin>

				<!-- issue: If apklib, sub-module is not excluded excludeFilterFile. R.java is always an error. -->
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>findbugs-maven-plugin</artifactId>
					<version>${findbugs-maven-plugin.version}</version>
					<executions>
						<execution>
							<id>findbugs-check</id>
							<phase>verify</phase>
							<goals>
								<goal>check</goal>
							</goals>
						</execution>
					</executions>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-pmd-plugin</artifactId>
					<version>${maven-pmd-plugin.version}</version>
					<configuration>
						<targetJdk>${java.version}</targetJdk>
					</configuration>
					<executions>
						<execution>
							<id>pmd-check</id>
							<goals>
								<goal>check</goal>
								<goal>cpd-check</goal>
							</goals>
						</execution>
					</executions>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-site-plugin</artifactId>
					<version>${maven-site-plugin.version}</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>${maven-javadoc-plugin.version}</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>${maven-source-plugin.version}</version>
				</plugin>

				<plugin>
					<artifactId>maven-antrun-plugin</artifactId>
					<version>${maven-antrun-plugin.version}</version>
				</plugin>

				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>versions-maven-plugin</artifactId>
					<version>${versions-maven-plugin.version}</version>
				</plugin>

			</plugins>
		</pluginManagement>

		<plugins>
			<!-- Release Process
				$ mvn clean release:clean release:prepare -DdryRun=true
				$ mvn clean release:clean release:prepare
				$ mvn release:perform
			-->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>${maven-release-plugin.version}</version>
				<configuration>
					<autoVersionSubmodules>true</autoVersionSubmodules>
					<tagNameFormat>Ver@{project.version}</tagNameFormat>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<configuration>
					<failsOnError>true</failsOnError>
					<consoleOutput>true</consoleOutput>
				</configuration>
				<executions>
					<execution>
						<phase>verify</phase>
						<goals>
							<goal>checkstyle</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>

	</build>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>${maven-site-plugin.version}</version>
				<configuration>
					<locales>en</locales>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>${maven-javadoc-plugin.version}</version>
				<configuration>
					<aggregate>true</aggregate>
				</configuration>
				<reportSets>
					<reportSet>
						<id>non-aggregate</id>
						<configuration>
							<!-- Specific configuration for the non aggregate report -->
						</configuration>
						<reports>
							<report>javadoc</report>
						</reports>
					</reportSet>
					<reportSet>
						<id>aggregate</id>
						<configuration>
							<!-- Specific configuration for the aggregate report -->
						</configuration>
						<reports>
							<report>aggregate</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>

			<!-- [WARNING] Unable to locate Source XRef to link to - DISABLED -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jxr-plugin</artifactId>
				<version>${maven-jxr-plugin.version}</version>
			</plugin>
		</plugins>
	</reporting>

	<profiles>
		<profile>
			<id>support_test</id>
			<repositories>
				<repository>
					<id>android-m2</id>
					<name>Android M2</name>
					<url>file://${env.ANDROID_HOME}/extras/android/m2repository</url>
				</repository>
			</repositories>
		</profile>

		<profile>
			<id>release-sign-artifacts</id>
			<activation>
				<property>
					<!-- activation:$ mvn release:perform -->
					<name>performRelease</name>
					<value>true</value>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>${maven-gpg-plugin.version}</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

</project>
